--- a/staff/jaume-villarreal/express-app/package.json
+++ b/staff/jaume-villarreal/express-app/package.json
@@ -4,6 +4,7 @@
   "description": "my super express app",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "session-file-store": "^1.3.1"
