--- a/staff/christian-haag/express-app/package.json
+++ b/staff/christian-haag/express-app/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "node-fetch": "^2.6.0",
+    "session-file-store": "^1.3.1"
   }
 }
