--- a/staff/jaume-villarreal/express-app/package.json
+++ b/staff/jaume-villarreal/express-app/package.json
@@ -10,7 +10,9 @@
     "node-fetch": "^2.6.0",
     "session-file-store": "^1.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jasmine": "^3.4.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
