--- a/staff/jose-ortuno/express-app/package.json
+++ b/staff/jose-ortuno/express-app/package.json
@@ -4,15 +4,16 @@
   "description": "my super express app",
   "main": "index.js",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "node-fetch": "^2.6.0",
     "session-file-store": "^1.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jasmine": "^3.4.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jasmine logic/**/**.spec.js"
   },
   "author": "",
   "license": "ISC"
