--- a/staff/lluis-agusti/express-app/001-express5/5/package.json
+++ b/staff/lluis-agusti/express-app/001-express5/5/package.json
@@ -6,13 +6,13 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-session": "^1.16.2",
-    "session-file-store": "^1.3.1"
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "jasmine": "^3.4.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jasmine logic/**/*.spec.js"
   },
   "author": "",
   "license": "ISC"
