--- a/staff/ara-manjon/express-app/4/package.json
+++ b/staff/ara-manjon/express-app/4/package.json
@@ -8,7 +8,9 @@
     "express-session": "^1.16.2",
     "session-file-store": "^1.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jasmine": "^3.4.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
