--- a/staff/jaume-villarreal/express-app/package.json
+++ b/staff/jaume-villarreal/express-app/package.json
@@ -14,7 +14,7 @@
     "jasmine": "^3.4.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jasmine logic/**/*.spec.js"
   },
   "author": "",
   "license": "ISC"
