--- a/staff/christian-haag/express-app/package.json
+++ b/staff/christian-haag/express-app/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jasmine logic/**/*.spec.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +14,8 @@
     "express-session": "^1.16.2",
     "node-fetch": "^2.6.0",
     "session-file-store": "^1.3.1"
+  },
+  "devDependencies": {
+    "jasmine": "^3.4.0"
   }
 }
