--- a/staff/jaume-villarreal/express-app/package.json
+++ b/staff/jaume-villarreal/express-app/package.json
@@ -4,16 +4,16 @@
   "description": "my super express app",
   "main": "index.js",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
-    "node-fetch": "^2.6.0",
-    "session-file-store": "^1.3.1"
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "jasmine": "^3.4.0"
   },
   "scripts": {
+    "start": "node . 8080",
+    "debug": "node debug . 8080",
     "test": "npx jasmine logic/**/*.spec.js"
   },
   "author": "",
