--- a/staff/manuel-barzi/express-app-pug/0/package.json
+++ b/staff/manuel-barzi/express-app-pug/0/package.json
@@ -8,7 +8,8 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "node-fetch": "^2.6.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "jasmine": "^3.4.0"
