--- a/staff/ara-manjon/express-app/4/package.json
+++ b/staff/ara-manjon/express-app/4/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "pug": "^2.0.4",
     "session-file-store": "^1.3.1"
   },
   "devDependencies": {
