--- a/staff/jose-ortuno/express-app/package.json
+++ b/staff/jose-ortuno/express-app/package.json
@@ -4,16 +4,20 @@
   "description": "my super express app",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "node-fetch": "^2.6.0",
-    "session-file-store": "^1.3.1"
+    "nodemon": "^1.19.1"
   },
   "devDependencies": {
     "jasmine": "^3.4.0"
   },
   "scripts": {
-    "test": "npx jasmine logic/**/**.spec.js"
+    "start": "node . 8080",
+    "watch": "npx nodemon . 8080",
+    "debug": "node debug . 8000",
+    "test": "npx jasmine logic/**/*.spec.js"
   },
   "author": "",
   "license": "ISC"
