--- a/staff/manuel-galvez/express-app/0/package.json
+++ b/staff/manuel-galvez/express-app/0/package.json
@@ -9,7 +9,8 @@
     "express-session": "^1.16.2",
     "node-fetch": "^2.6.0",
     "nodemon": "^1.19.1",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "yarn": "^1.17.3"
   },
   "devDependencies": {
     "jasmine": "^3.4.0"
