--- a/staff/ara-manjon/express-app/express-app-folder/package.json
+++ b/staff/ara-manjon/express-app/express-app-folder/package.json
@@ -10,7 +10,8 @@
     "session-file-store": "^1.3.1"
   },
   "devDependencies": {
-    "jasmine": "^3.4.0"
+    "jasmine": "^3.4.0",
+    "nodemon": "^1.19.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
