--- a/staff/adria-arquimbau/express-app/express-app/package.json
+++ b/staff/adria-arquimbau/express-app/express-app/package.json
@@ -8,8 +8,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "node-fetch": "^2.6.0",
-    "nodemon": "^1.19.1",
-    "pug": "^2.0.4"
+    "nodemon": "^1.19.1"
   },
   "devDependencies": {
     "jasmine": "^3.4.0"
