--- a/staff/jaume-villarreal/my-api/package.json
+++ b/staff/jaume-villarreal/my-api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx mocha logic '**/*.spec.js'"
+    "test": "npx mocha logic '**/*.spec.js'",
+    "test-debug": "npx mocha debug logic '**/*.spec.js'"
   },
   "keywords": [],
   "author": "",
