update feature/my-api with 7 tests

--- a/staff/carolina-zhou/my-api/package.json
+++ b/staff/carolina-zhou/my-api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx mocha logic"
+    "test": "npx mocha logic/**/*.spec.js",
+    "test-debug": "npx mocha --inspect-brk logic"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "dependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
-    "mongodb": "^3.3.0"
+    "mongodb": "^3.3.0",
+    "node-fetch": "^2.6.0"
   }
 }
