--- a/staff/josep-boix/my-api/package.json
+++ b/staff/josep-boix/my-api/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.0",
     "mongodb": "^3.3.0"
   }
