--- a/staff/manuel-galvez/my-api/package.json
+++ b/staff/manuel-galvez/my-api/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "js-sha256": "^0.9.0",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.0",
     "mongodb": "^3.3.0"
   }
