--- a/staff/jorge-garces/my-api/package.json
+++ b/staff/jorge-garces/my-api/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "express": "^4.17.1",
     "js-sha256": "^0.9.0",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.0",
     "mongodb": "^3.3.0"
   }
