--- a/staff/carolina-zhou/my-api/package.json
+++ b/staff/carolina-zhou/my-api/package.json
@@ -8,7 +8,8 @@
     "watch": "npx nodemon .",
     "debug": "node debug .",
     "test": "npx mocha logic/**/*.spec.js",
-    "test-debug": "npx mocha --inspect-brk logic"
+    "test-debug": "npx mocha debug logic/**/*.spec.js",
+    "test-inspect": "npx mocha --inspect-brk logic/**/*.spec.js"
   },
   "keywords": [],
   "author": "",
@@ -16,11 +17,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.0",
     "mongodb": "^3.3.0",
-    "nodemon": "^1.19.1",
-    "node-fetch": "^2.6.0"
+    "nodemon": "^1.19.1"
   }
 }
