--- a/staff/jaume-villarreal/my-api/package.json
+++ b/staff/jaume-villarreal/my-api/package.json
@@ -7,8 +7,9 @@
     "start": "node .",
     "watch": "npx nodemon .",
     "debug": "node debug .",
-    "test": "npx mocha logic '**/*.spec.js'",
-    "test-debug": "npx mocha --inspect-brk logic"
+    "test": "npx mocha logic/**/*.spec.js",
+    "test-debug": "npx mocha debug logic/**/*.spec.js",
+    "test-inspect": "npx mocha --inspect-brk logic/**/*.spec.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.0",
