divide logic per sub index files add routes . Final version

--- a/staff/sylvain-legrill/my-api/package.json
+++ b/staff/sylvain-legrill/my-api/package.json
@@ -7,7 +7,7 @@
     "start": "node .",
     "watch": "npx nodemon .",
     "debug": "node debug .",
-    "test": "npx mocha logic",
+    "test": "npx mocha logic/**/*.spec.js",
     "test-debug": "npx mocha --inspect-brk logic"
   },
   "keywords": [],
