--- a/staff/josep-boix/my-api/package.json
+++ b/staff/josep-boix/my-api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx mocha logic '**/*.spec.js'"
+    "test": "npx mocha logic/**/*.spec.js"
   },
   "keywords": [],
   "author": "",
