--- a/staff/jorge-garces/my-api/package.json
+++ b/staff/jorge-garces/my-api/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "js-sha256": "^0.9.0",
     "jsonwebtoken": "^8.5.1",
