--- a/staff/manuel-galvez/my-api/package.json
+++ b/staff/manuel-galvez/my-api/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.2.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "js-sha256": "^0.9.0",
