--- a/staff/ara-manjon/my-api-mongoose/package.json
+++ b/staff/ara-manjon/my-api-mongoose/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-api",
+  "name": "my-api-mongoose",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,12 +17,14 @@
   "dependencies": {
     "mongoose": "^5.6.10",
     "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.3.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
     "mocha": "^6.2.0",
-    "mongodb": "^3.3.0",
     "nodemon": "^1.19.1"
   }
 }
