--- a/staff/felipe-fernandez/my-api-mongoose/.env
+++ b/staff/felipe-fernandez/my-api-mongoose/.env
@@ -1,4 +1,3 @@
 PORT = 8080
-DB_URL = mongodb://localhost:27017
-DB_NAME = my-api
+DB_URL = mongodb://localhost:27017/my-api
 JWT_SECRET = bootcamp malo rulez
