--- a/staff/jorge-garces/my-api-mongoose/package.json
+++ b/staff/jorge-garces/my-api-mongoose/package.json
@@ -18,6 +18,7 @@
     "js-sha256": "^0.9.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.0",
-    "mongodb": "^3.3.0"
+    "mongodb": "^3.3.0",
+    "mongoose": "^5.6.10"
   }
 }
