--- a/staff/josep-boix/my-api/package.json
+++ b/staff/josep-boix/my-api/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx mocha logic/**/*.spec.js"
+    "test": "npx mocha logic/**/*.spec.js",
+    "test-debug": "npx mocha debug logic/**/*.spec.js",
+    "test-inspect": "npx mocha --inspect-brk logic/**/*.spec.js"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +16,8 @@
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "mongodb": "^3.3.0",
+    "chai": "^4.2.0",
     "mocha": "^6.2.0",
-    "chai": "^4.2.0"
+    "mongodb": "^3.3.0"
   }
 }
