--- a/staff/jorge-garces/my-stuff-api/0/.env
+++ b/staff/jorge-garces/my-stuff-api/0/.env
@@ -1,3 +1,3 @@
 PORT = 8080
-DB_URL = mongodb://localhost:27017/my-stuff-api
+DB_URL = mongodb://172.17.0.2:27017/my-stuff-api
 JWT_SECRET = en realidad son uruguayo (juanpi), o sea, un vendido
