add logic and spec

--- a/staff/christian-haag/my-stuff-api/promises/package.json
+++ b/staff/christian-haag/my-stuff-api/promises/package.json
@@ -7,9 +7,9 @@
     "start": "node .",
     "watch": "npx nodemon .",
     "debug": "node debug .",
-    "test": "npx mocha logic/**/*.spec.js",
-    "test-debug": "npx mocha debug logic/**/*.spec.js",
-    "test-inspect": "npx mocha --inspect-brk logic/**/*.spec.js"
+    "test": "npx mocha logic/**/**/*.spec.js --timeout 10000",
+    "test-debug": "npx mocha debug logic/**/**/*.spec.js",
+    "test-inspect": "npx mocha --inspect-brk logic/**/**/*.spec.js"
   },
   "keywords": [],
   "author": "",
