--- a/staff/jorge-rodri/my-stuff-api/1/.env
+++ b/staff/jorge-rodri/my-stuff-api/1/.env
@@ -1,3 +1,4 @@
 PORT = 8080
 DB_URL = mongodb://localhost:27017/my-api
+DB_URL_TEST = mongodb://localhost:27017/my-api-test
 JWT_SECRET = en realidad son uruguayo (juanpi), o sea, un vendido
