--- a/staff/jaume-villarreal/summer-activity-manager/package.json
+++ b/staff/jaume-villarreal/summer-activity-manager/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    
     "start": "node .",
     "watch": "npx nodemon .",
     "debug": "node debug .",
@@ -21,7 +20,8 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.10"
+    "mongoose": "^5.6.10",
+    "sass": "^1.22.10"
   },
   "devDependencies": {
     "chai": "^4.2.0",
