split my-stuff into modules

--- a/staff/manuel-barzi/my-stuff-app/0/package.json
+++ b/staff/manuel-barzi/my-stuff-app/0/package.json
@@ -13,7 +13,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache"
+    "test:inspect": "react-scripts --inspect-brk test --runInBand --no-cache",
+    "test:debug": "react-scripts --debug test --runInBand --no-cache"
   },
   "eslintConfig": {
     "extends": "react-app"
