--- a/staff/felipe-fernandez/footcamp/footcamp-api/package.json
+++ b/staff/felipe-fernandez/footcamp/footcamp-api/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "my-api",
+  "name": "footcamp-fantasy",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx mocha '**/*.spec.js'",
-    "test-debug": "npx mocha --inspect-brk '**/*.spec.js'",
     "start": "node .",
-    "watch2": "npx nodemon .",
+    "watch": "npx nodemon .",
     "debug": "node debug .",
-    "test-inspect": "npx mocha --inspect-brk logic/**/*.spec.js"
+    "test": "npx mocha logic/**/**/*.spec.js",
+    "test-debug": "npx mocha debug logic/**/**/*.spec.js",
+    "test-inspect": "npx mocha --inspect-brk logic/**/**/*.spec.js"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "footcamp-data": "file:../footcamp-data",
+    "footcamp-utils": "file:../footcamp-utils",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.3.0",
-    "mongoose": "^5.6.10"
+    "mongodb": "^3.3.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
