--- a/staff/felipe-fernandez/footcamp/footcamp-utils/package.json
+++ b/staff/felipe-fernandez/footcamp/footcamp-utils/package.json
@@ -2,7 +2,7 @@
   "name": "footcamp-utils",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "random.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
