--- a/staff/oihane-unciti/my-project/my-api-project/package.json
+++ b/staff/oihane-unciti/my-project/my-api-project/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.10"
+    "my-project-data": "file:../my-project-data",
+    "my-project-utils": "file:../my-project-utils"
   },
   "devDependencies": {
     "chai": "^4.2.0",
