--- a/staff/manuel-barzi/my-stuff-app/1/package.json
+++ b/staff/manuel-barzi/my-stuff-app/1/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "my-stuff-utils": "file:../../my-stuff-utils",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -13,8 +14,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:inspect": "react-scripts --inspect-brk test --runInBand --no-cache",
-    "test:debug": "react-scripts --debug test --runInBand --no-cache"
+    "test:inspect": "react-scripts --inspect-brk=9230 test --runInBand --no-cache"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +30,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jsonwebtoken": "^8.5.1",
+    "my-stuff-data": "file:../../my-stuff-data"
   }
 }
