--- a/staff/oihane-unciti/generisad/my-api-project/package.json
+++ b/staff/oihane-unciti/generisad/my-api-project/package.json
@@ -20,8 +20,8 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "my-project-data": "file:../my-project-data",
-    "my-project-utils": "file:../my-project-utils"
+    "generisad-data": "file:../generisad-data",
+    "generisad-utils": "file:../generisad-utils"
   },
   "devDependencies": {
     "chai": "^4.2.0",
