--- a/staff/felipe-fernandez/footcamp/footcamp-api/.env
+++ b/staff/felipe-fernandez/footcamp/footcamp-api/.env
@@ -1,3 +1,4 @@
 PORT = 8080
-DB_URL = mongodb://localhost:27017/my-fantasy-api
+DB_URL = mongodb://localhost:27017/footcamp-api
+DB_URL_TEST = mongodb://localhost/footcamp-test
 JWT_SECRET = Secret token
