--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-api/package.json
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-api/package.json
@@ -7,7 +7,7 @@
     "start": "node .",
     "watch": "npx nodemon .",
     "debug": "node debug .",
-    "test": "npx mocha logic/**/**/*.spec.js",
+    "test": "npx mocha logic/**/**/*.spec.js --timeout 10000",
     "test-debug": "npx mocha debug logic/**/**/*.spec.js",
     "test-inspect": "npx mocha --inspect-brk logic/**/**/*.spec.js"
   },
