--- a/staff/jorge-rodri/classty/classty-api/package.json
+++ b/staff/jorge-rodri/classty/classty-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-api-mongoose",
+  "name": "classty-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,25 +8,23 @@
     "watch": "npx nodemon .",
     "debug": "node debug .",
     "test": "npx mocha logic/**/**/*.spec.js",
-    "test-debug": "npx mocha debug logic/**/*.spec.js",
-    "test-inspect": "npx mocha --inspect-brk logic/**/*.spec.js"
+    "test-debug": "npx mocha debug logic/**/**/*.spec.js",
+    "test-inspect": "npx mocha --inspect-brk logic/**/**/*.spec.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "classty-data": "../classty-data",
+    "classty-utils": "../classty-utils",
     "cors": "^2.8.5",
-    "data": "^0.6.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.10",
-    "utils": "^0.3.1"
+    "express-session": "^1.16.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.0",
-    "nodemon": "^1.19.1"
-  }
+    "mocha": "^6.2.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
