--- a/staff/jorge-rodri/classty/classty-api/package.json
+++ b/staff/jorge-rodri/classty/classty-api/package.json
@@ -12,6 +12,8 @@
     "test-inspect": "npx mocha --inspect-brk logic/**/**/*.spec.js"
   },
   "dependencies": {
+    "classty-data": "file:../classty-data",
+    "classty-utils": "file:../classty-utils",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
