--- a/staff/albert-fuente/skyshop/skyshop-api/package.json
+++ b/staff/albert-fuente/skyshop/skyshop-api/package.json
@@ -7,19 +7,23 @@
     "test": "npx mocha '**/**/*.spec.js'",
     "test-debug": "npx mocha --inspect-brk '**/**/*.spec.js'"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "chai": "^4.2.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "js-sha256": "^0.9.0",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^6.2.0",
     "mongodb": "^3.3.0",
     "mongoose": "^5.6.10",
+    "skyshop-data": "file:../skyshop-data",
+    "skyshop-utils": "file:../skyshop-utils",
     "yargs": "^14.0.0"
-  }
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
