--- a/staff/albert-fuente/skyshop/skyshop-api/.env
+++ b/staff/albert-fuente/skyshop/skyshop-api/.env
@@ -1,3 +1,4 @@
 PORT = 8080
-DB_URL = mongodb://localhost:27017/skyshop
+DB_URL = mongodb://localhost:27017/skyshop-api
+DB_URL_TEST = mongodb://localhost:27017/skyshop-api-test
 JWT_SECRET = patitos
