--- a/staff/juan-bovo/vltra/vltra-utils/package.json
+++ b/staff/juan-bovo/vltra/vltra-utils/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.0"
+    "mocha": "^6.2.0",
+    "mongoose": "^5.6.12"
   }
 }
