--- a/staff/nestor-llorens/skycaching/api/package.json
+++ b/staff/nestor-llorens/skycaching/api/package.json
@@ -16,10 +16,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "data": "file:../data",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.12"
+    "mongoose": "^5.6.12",
+    "utils": "file:../utils"
   },
   "devDependencies": {
     "chai": "^4.2.0",
