--- a/staff/anna-nolla/dogs-company/api/package.json
+++ b/staff/anna-nolla/dogs-company/api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npx mocha logic/**/**/*.spec.js",
     "debug": "node debug .",
-    "test-debug": "npx mocha debug logic/**/**/*.spec.js"
+    "test-debug": "npx mocha debug logic/**/**/*.spec.js",
+    "test:coverage": "nyc --reporter=html --reporter=text mocha logic/**/**/*.spec.js --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "nyc": "^14.1.1"
   }
 }
