--- a/staff/jorge-rodri/classty/classty-api/package.json
+++ b/staff/jorge-rodri/classty/classty-api/package.json
@@ -9,7 +9,8 @@
     "debug": "node debug .",
     "test": "npx mocha logic/**/**/*.spec.js",
     "test-debug": "npx mocha debug logic/**/**/*.spec.js",
-    "test-inspect": "npx mocha --inspect-brk logic/**/**/*.spec.js"
+    "test-inspect": "npx mocha --inspect-brk logic/**/**/*.spec.js",
+    "test:coverage": "nyc --reporter=html --reporter=text mocha logic/**/**/*.spec.js --runInBand"
   },
   "dependencies": {
     "classty-data": "file:../classty-data",
@@ -22,7 +23,8 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.0"
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1"
   },
   "keywords": [],
   "author": "",
