--- a/staff/albert-fuente/skyshop/skyshop-api/package.json
+++ b/staff/albert-fuente/skyshop/skyshop-api/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "npx mocha '**/**/*.spec.js'",
-    "test-debug": "npx mocha --inspect-brk '**/**/*.spec.js'"
+    "test-debug": "npx mocha --inspect-brk '**/**/*.spec.js'",
+    "test:coverage": "nyc --reporter=html --reporter=text mocha logic/**/**/*.spec.js --runInBand"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
@@ -21,7 +23,8 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.0"
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1"
   },
   "keywords": [],
   "author": "",
