--- a/staff/albert-fuente/skyshop/skyshop-api/package.json
+++ b/staff/albert-fuente/skyshop/skyshop-api/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "coverage": "^0.4.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
