--- a/staff/felipe-fernandez/footcamp/footcamp-api/package.json
+++ b/staff/felipe-fernandez/footcamp/footcamp-api/package.json
@@ -9,7 +9,8 @@
     "debug": "node debug .",
     "test": "npx mocha logic/**/**/*.spec.js",
     "test-debug": "npx mocha debug logic/**/**/*.spec.js",
-    "test-inspect": "npx mocha --inspect-brk logic/**/**/*.spec.js"
+    "test-inspect": "npx mocha --inspect-brk logic/**/**/*.spec.js",
+    "test:coverage": "nyc --reporter=html --reporter=text mocha logic/**/**/*.spec.js --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +23,8 @@
     "footcamp-data": "file:../footcamp-data",
     "footcamp-utils": "file:../footcamp-utils",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.3.0"
+    "mongodb": "^3.3.0",
+    "nyc": "^14.1.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
