--- a/staff/felipe-fernandez/footcamp/footcamp-utils/package.json
+++ b/staff/felipe-fernandez/footcamp/footcamp-utils/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx mocha '**/*.spec.js'"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chai": "^4.2.0"
+  }
 }
