--- a/staff/albert-fuente/skyshop/skyshop-api/package.json
+++ b/staff/albert-fuente/skyshop/skyshop-api/package.json
@@ -9,6 +9,8 @@
     "test:coverage": "nyc --reporter=html --reporter=text mocha logic/**/**/*.spec.js --runInBand"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "coverage": "^0.4.1",
     "dotenv": "^8.1.0",
@@ -20,7 +22,9 @@
     "mongoose": "^5.6.10",
     "skyshop-data": "file:../skyshop-data",
     "skyshop-utils": "file:../skyshop-utils",
-    "yargs": "^14.0.0"
+    "yargs": "^14.0.0",
+    "cloudinary":"^1.14.0",
+    "streamifier":"^0.1.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -29,5 +33,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bcryptjs": "^2.4.3"
 }
