--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-api/package.json
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-api/package.json
@@ -9,7 +9,8 @@
     "debug": "node debug .",
     "test": "npx mocha logic/**/**/*.spec.js --timeout 10000",
     "test-debug": "npx mocha debug logic/**/**/*.spec.js",
-    "test-inspect": "npx mocha --inspect-brk logic/**/**/*.spec.js"
+    "test-inspect": "npx mocha --inspect-brk logic/**/**/*.spec.js",
+    "coverage": "nyc --reporter=html --reporter=text mocha logic/**/**/*.spec.js --timeout 10000 --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -19,11 +20,14 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.10"
+    "cors": "^2.8.5",
+    "data": "file:../e-cohabitat-data",
+    "utils": "file:../e-cohabitat-utils"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "nyc": "^14.1.1"
   }
 }
