--- a/staff/albert-fuente/skyshop/skyshop-api/package.json
+++ b/staff/albert-fuente/skyshop/skyshop-api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.14.0",
     "cors": "^2.8.5",
     "coverage": "^0.4.1",
     "dotenv": "^8.1.0",
@@ -22,9 +23,8 @@
     "mongoose": "^5.6.10",
     "skyshop-data": "file:../skyshop-data",
     "skyshop-utils": "file:../skyshop-utils",
-    "yargs": "^14.0.0",
-    "cloudinary":"^1.14.0",
-    "streamifier":"^0.1.1"
+    "streamifier": "^0.1.1",
+    "yargs": "^14.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
