setup react-app, login and register components

--- a/staff/felipe-fernandez/footcamp/footcamp-app/package.json
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "footcamp-data": "file:../footcamp-data",
+    "footcamp-utils": "file:../footcamp-utils",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
