--- a/staff/lluis-agusti/democratum/democratum-api/.env
+++ b/staff/lluis-agusti/democratum/democratum-api/.env
@@ -1,5 +1,5 @@
 PORT = 8080
-DB_URL = mongodb://localhost:27017/democratum
+DB_URL = mongodb://localhost:27017/democratum-test
 JWT_SECRET = contrasenya1
 CLOUDINARY_API_KEY = 837744298618723
 CLOUDINARY_SECRET_KEY = uNsesIjYEkHgIMTMKqmDnqpXVmg
