initial react components

--- a/staff/felipe-fernandez/footcamp/footcamp-app/package.json
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "footcamp-data": "file:../footcamp-data",
     "footcamp-utils": "file:../footcamp-utils",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -14,7 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:inspect": "react-scripts --inspect-brk=9230 test --runInBand --no-cache"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +30,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "footcamp-data": "file:../footcamp-data",
+    "jsonwebtoken": "^8.5.1"
   }
 }
