--- a/staff/jorge-rodri/classty/classty-api/.env
+++ b/staff/jorge-rodri/classty/classty-api/.env
@@ -1,4 +1,4 @@
 PORT = 8080
-DB_URL = mongodb://localhost:27017/classty-api
+DB_URL = mongodb://localhost:27017/classty
 DB_URL_TEST = mongodb://localhost:27017/classty-api-test
 JWT_SECRET = en realidad son uruguayo (juanpi), o sea, un vendido
