--- a/staff/carolina-lopez/menu-planner/menu-planner-api/package.json
+++ b/staff/carolina-lopez/menu-planner/menu-planner-api/package.json
@@ -16,17 +16,16 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "cloudinary": "^1.14.0",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "menu-planner-data": "file:../menu-planner-data",
     "menu-planner-utils": "file:../menu-planner-utils",
+    "moment": "^2.24.0",
     "mongodb": "^3.3.2",
     "mongoose": "^5.6.10",
-    "react-router-dom": "^5.0.1",
-    "streamifier": "^0.1.1"
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
