--- a/staff/lluis-agusti/democratum/democratum-api/package.json
+++ b/staff/lluis-agusti/democratum/democratum-api/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "cloudinary": "^1.14.0",
     "cors": "^2.8.5",
+    "coverage": "^0.4.1",
     "democratum-data": "file:../democratum-data",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
