--- a/staff/roger-perez/goliath/goliath-api/.env
+++ b/staff/roger-perez/goliath/goliath-api/.env
@@ -1,3 +1,3 @@
 PORT = 8080
-DB_URL = mongodb://localhost:27017/my-api
+DB_URL = mongodb://localhost:27017/goliath-api
 JWT_SECRET = en realidad son uruguayo (juanpi), o sea, un vendido
