--- a/staff/juan-bovo/vltra/vltra-app/package.json
+++ b/staff/juan-bovo/vltra/vltra-app/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "font-awesome": "^4.7.0",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
+    "vltra-data": "file:../vltra-data",
+    "vltra-utils": "file:../vltra-utils"
   },
   "scripts": {
     "start": "react-scripts start",
