--- a/staff/juan-bovo/vltra/API/.env
+++ b/staff/juan-bovo/vltra/API/.env
@@ -2,4 +2,4 @@ PORT = 8080
 DB_URL = mongodb://localhost/vltra-api
 #DB_URL = mongodb://localhost/my-api-test
 DB_URL_TEST = mongodb://localhost/vltra-test
-JWT_SECRET = el padre de mi abuela tenia doble vida
+JWT_SECRET = hoy es un dia comun
