--- a/staff/nestor-llorens/skycaching/api/package.json
+++ b/staff/nestor-llorens/skycaching/api/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "data": "file:../data",
     "dotenv": "^8.1.0",
