added some user logic files

--- a/staff/juan-bovo/vltra/vltra-app/.env
+++ b/staff/juan-bovo/vltra/vltra-app/.env
@@ -2,4 +2,5 @@ PORT = 8080
 DB_URL = mongodb://localhost/vltra
 #DB_URL = mongodb://localhost/vltra-test
 DB_URL_TEST = mongodb://localhost/vltra-test
+REACT_APP_DB_URL_TEST = mongodb://localhost/vltra-test
 JWT_SECRET = hoy es un dia comun
