--- a/staff/juan-bovo/vltra/vltra-app/.env
+++ b/staff/juan-bovo/vltra/vltra-app/.env
@@ -1,6 +1,3 @@
-PORT = 8080
-DB_URL = mongodb://localhost/vltra
-#DB_URL = mongodb://localhost/vltra-test
-DB_URL_TEST = mongodb://localhost/vltra-test
+REACT_APP_API_URL = http://localhost:8080/vltra
 REACT_APP_DB_URL_TEST = mongodb://localhost/vltra-test
-JWT_SECRET = hoy es un dia comun
+REACT_APP_JWT_SECRET_TEST = hoy es un dia comun
