--- a/staff/anna-nolla/dogs-company/utils/package.json
+++ b/staff/anna-nolla/dogs-company/utils/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.0"
+    "mocha": "^6.2.0",
+    "react": "^16.9.0"
   }
 }
+
+
