--- a/staff/juan-bovo/vltra/vltra-api/.env
+++ b/staff/juan-bovo/vltra/vltra-api/.env
@@ -1,5 +1,5 @@
 PORT = 8080
-DB_URL = mongodb://localhost/vltra-api
-#DB_URL = mongodb://localhost/my-api-test
+#DB_URL = mongodb://localhost/vltra-api
+DB_URL = mongodb://localhost/vltra-test
 DB_URL_TEST = mongodb://localhost/vltra-test
 JWT_SECRET = hoy es un dia comun
