--- a/staff/nestor-llorens/skycaching/app/package.json
+++ b/staff/nestor-llorens/skycaching/app/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "leaflet": "^1.5.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-leaflet": "^2.4.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "utils": "file:../utils"
@@ -16,7 +18,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "test-inspect": "react-scripts --inspect-brk=9230 test --runInBand --no-cache"
-
   },
   "eslintConfig": {
     "extends": "react-app"
