add some logic and styles

--- a/staff/felipe-fernandez/footcamp/footcamp-app/package.json
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/package.json
@@ -35,5 +35,19 @@
     "footcamp-data": "file:../footcamp-data",
     "footcamp-utils": "file:../footcamp-utils",
     "jsonwebtoken": "^8.5.1"
-  }
+  },
+  "configurations": [
+    {
+      "name": "Debug CRA Tests",
+      "type": "node",
+      "request": "launch",
+      "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/react-scripts",
+      "args": ["test", "--runInBand", "--no-cache", "--env=jsdom"],
+      "cwd": "${workspaceRoot}",
+      "protocol": "inspector",
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen"
+    }
+  ]
+
 }
