fixed logic and routes for id on token method

--- a/staff/juan-bovo/vltra/vltra-api/.env
+++ b/staff/juan-bovo/vltra/vltra-api/.env
@@ -2,4 +2,4 @@ PORT = 8080
 #DB_URL = mongodb://localhost/vltra-api
 DB_URL = mongodb://localhost/vltra-test
 DB_URL_TEST = mongodb://localhost/vltra-test
-JWT_SECRET = hoy es un dia comun
+JWT_SECRET = a ver si nos ponemos de acuerdo
