--- a/staff/juan-bovo/vltra/vltra-app/.env
+++ b/staff/juan-bovo/vltra/vltra-app/.env
@@ -1,3 +1,3 @@
 REACT_APP_API_URL = http://localhost:8080/vltra
 REACT_APP_DB_URL_TEST = mongodb://localhost/vltra-test
-REACT_APP_JWT_SECRET_TEST = hoy es un dia comun
+REACT_APP_JWT_SECRET_TEST = a ver si nos ponemos de acuerdo
