--- a/staff/anna-nolla/dogs-company/dog-company-app/.env
+++ b/staff/anna-nolla/dogs-company/dog-company-app/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL = http://192.168.0.38:8080/api
-REACT_APP_DB_URL_TEST = mongodb://192.168.0.38/my-api-test
+REACT_APP_API_URL = http://localhost:8080/api
+REACT_APP_DB_URL_TEST = mongodb://localhost/api-test
 REACT_APP_JWT_SECRET_TEST = el mundo es maravilloso
