--- a/staff/anna-nolla/dogs-company/dog-company-app/package.json
+++ b/staff/anna-nolla/dogs-company/dog-company-app/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "dotenv": "^8.1.0",
+    "leaflet": "^1.5.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-leaflet": "^2.4.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "utils": "file:../utils"
