--- a/staff/albert-fuente/skyshop/skyshop-app/.env
+++ b/staff/albert-fuente/skyshop/skyshop-app/.env
@@ -1,1 +1,5 @@
 REACT_APP_API_URL = http://localhost:8080/api
+REACT_APP_DB_URL_TEST = mongodb://localhost/skyshop-api-test
+REACT_APP_JWT_SECRET_TEST = patitos
+
+
