--- a/staff/jorge-rodri/classty/classty-api/package.json
+++ b/staff/jorge-rodri/classty/classty-api/package.json
@@ -19,7 +19,11 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "cloudinary": "^1.15.0",
+    "busboy": "^0.3.1",
+    "body-parser":"^1.19.0"
+
   },
   "devDependencies": {
     "chai": "^4.2.0",
