--- a/staff/albert-fuente/skyshop/skyshop-app/package.json
+++ b/staff/albert-fuente/skyshop/skyshop-app/package.json
@@ -6,9 +6,10 @@
     "hookrouter": "^1.2.3",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-countdown-now": "^2.1.1",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
