--- a/staff/albert-fuente/skyshop/skyshop-app/package.json
+++ b/staff/albert-fuente/skyshop/skyshop-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "hookrouter": "^1.2.3",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-countdown-now": "^2.1.1",
