--- a/staff/nestor-llorens/skycaching/app/package.json
+++ b/staff/nestor-llorens/skycaching/app/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "install": "^0.13.0",
     "leaflet": "^1.5.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "npm": "^6.11.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-leaflet": "^2.4.0",
