--- a/staff/carolina-lopez/menu-planner/menu-planner-api/package.json
+++ b/staff/carolina-lopez/menu-planner/menu-planner-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-api-mongoose",
+  "name": "menu-planner-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "coverage": "^0.4.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
