update app with renamed component folders and updated testing

--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-api/.env
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-api/.env
@@ -1,4 +1,5 @@
 PORT = 8080
-DB_URL = mongodb://localhost:27017/e-cohabitat-api
+#DB_URL = mongodb://localhost:27017/e-cohabitat-api
+DB_URL = mongodb://localhost:27017/e-cohabitat-test
 DB_URL_TEST = mongodb://localhost/e-cohabitat-test
 JWT_SECRET = this potato is the final boss
