--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-api/package.json
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-api/package.json
@@ -10,7 +10,7 @@
     "test": "npx mocha logic/**/**/*.spec.js --timeout 10000",
     "test-debug": "npx mocha debug logic/**/**/*.spec.js --timeout 10000",
     "test-inspect": "npx mocha --inspect-brk logic/**/**/*.spec.js",
-    "coverage": "nyc --reporter=html --reporter=text mocha logic/**/**/*.spec.js --timeout 10000 --runInBand"
+    "test:coverage": "npx nyc --reporter=html --reporter=text mocha logic/**/**/*.spec.js --timeout 10000 --runInBand"
   },
   "keywords": [],
   "author": "",
