--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/package.json
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
+    "bcryptjs": "^2.4.3",
     "node-sass": "^4.12.0",
     "query-string": "^6.8.2",
     "react": "^16.9.0",
