--- a/staff/carolina-lopez/menu-planner/menu-planner-api/.env
+++ b/staff/carolina-lopez/menu-planner/menu-planner-api/.env
@@ -1,5 +1,6 @@
 PORT = 8080
 DB_URL = mongodb://localhost:27017/menu-planner-api
+#DB_URL = mongodb://localhost:27017/menu-planner-api-test
 JWT_SECRET = en realidad son uruguayo (juanpi), o sea, un vendido
 DB_URL_TEST = mongodb://localhost:27017/menu-planner-api-test
 CLOUDINARY_API_KEY = 179442161563497
