--- a/staff/carolina-lopez/menu-planner/menu-planner-api/package.json
+++ b/staff/carolina-lopez/menu-planner/menu-planner-api/package.json
@@ -8,7 +8,8 @@
     "debug": "node debug .",
     "test": "npx mocha logic/**/*.spec.js",
     "test-debug": "npx mocha debug logic/**/**/*.spec.js",
-    "test-inspect": "npx mocha --inspect-brk logic/**/*.spec.js"
+    "test-inspect": "npx mocha --inspect-brk logic/**/*.spec.js",
+    "test:coverage": "nyc --reporter=html --reporter=text mocha logic/**/**/*.spec.js --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,7 @@
     "moment": "^2.24.0",
     "mongodb": "^3.3.2",
     "mongoose": "^5.6.10",
+    "nyc": "^14.1.1",
     "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
