--- a/staff/felipe-fernandez/footcamp/footcamp-app/.env
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/.env
@@ -1,4 +1,4 @@
 REACT_APP_API_URL = http://localhost:8080/api
-#REACT_APP_API_URL = https://infinite-caverns-24790.herokuapp.com/
+#REACT_APP_API_URL = https://infinite-caverns-24790.herokuapp.com/api
 REACT_APP_DB_URL_TEST = mongodb://localhost/footcamp-test
 REACT_APP_JWT_SECRET_TEST = Secret token
