added JSdoc, version 1.0 deployed

--- a/staff/nestor-llorens/skycaching/app/.env
+++ b/staff/nestor-llorens/skycaching/app/.env
@@ -1,4 +1,4 @@
-#REACT_APP_API_URL = https://rocky-inlet-39935.herokuapp.com/api
-REACT_APP_API_URL = http://localhost:8080/api
+REACT_APP_API_URL = https://rocky-inlet-39935.herokuapp.com/api
+#REACT_APP_API_URL = http://localhost:8080/api
 REACT_APP_DB_URL_TEST = mongodb://localhost/skycaching-api-test
 REACT_APP_JWT_SECRET_TEST = sup3r ub3r s3cr3t
