--- a/staff/nestor-llorens/skycaching/api/.env
+++ b/staff/nestor-llorens/skycaching/api/.env
@@ -1,5 +1,6 @@
 PORT = 8080
-DB_URL = mongodb://localhost/skycaching-api-test
+DB_URL = mongodb://heroku_tk57s966:6lljhccg9ta001g4imi2dhpreq@ds033123.mlab.com:33123/heroku_tk57s966
+#DB_URL = mongodb://localhost/skycaching-api-test
 #DB_URL = mongodb://localhost/skycaching-api
 DB_URL_TEST = mongodb://localhost/skycaching-api-test
 JWT_SECRET = sup3r ub3r s3cr3t
